--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,7 @@
-name=ADXL362
+name=particle_ADXL362
 version=0.0.1
 license=GNU Lesser GPL v3
 author=Richard Whitney <richard@particle.io>
-sentence=Read orientation and acceleration from the ADXL362
+sentence=Read orientation, acceleration and temperature from the ADXL362
 url=https://github.com/spark/ADXL362
 repository=spark/adxl362
