--- a/library.properties
+++ b/library.properties
@@ -5,3 +5,4 @@ author=Richard Whitney <richard@particle.io>
 sentence=Read orientation, acceleration and temperature from the ADXL362
 url=https://github.com/spark/ADXL362
 repository=spark/adxl362
+includes=ADXL362.h
