--- a/library.properties
+++ b/library.properties
@@ -3,6 +3,6 @@ version=0.0.1
 license=GNU Lesser GPL v3
 author=Richard Whitney <richard@particle.io>
 sentence=Read orientation, acceleration and temperature from the ADXL362
-url=https://github.com/spark/ADXL362
+url=https://github.com/particle-iot/ADXL362
 repository=spark/adxl362
 includes=ADXL362.h
